# modules-cpp23-hello

./: .clangd  .gitignore  CMakeLists.txt  README.md  foo.cxx  main.cxx
module_1/: CMakeLists.txt  module_1.cxx
module_2/: CMakeLists.txt  module_2.cxx
module_3/: CMakeLists.txt  module_3.cxx
